--- a/mdp-group-15-master/Android/app/src/main/res/layout/activity_arena.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/layout/activity_arena.xml
@@ -121,7 +121,7 @@
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/border4"
+        android:background="@drawable/change_color"
         android:fontFamily="@font/amaranth"
         android:shadowColor="@color/newwhite"
         android:textColor="@color/newwhite"
@@ -153,7 +153,7 @@
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/border4"
+        android:background="@drawable/change_color"
         android:fontFamily="@font/amaranth"
         android:shadowColor="@color/newwhite"
         android:textColor="@color/newwhite"
@@ -169,7 +169,7 @@
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginTop="104dp"
-        android:background="@drawable/border4"
+        android:background="@drawable/change_color"
         android:fontFamily="@font/amaranth"
         android:text="ToggleButton"
         android:textColor="@color/white"
@@ -184,7 +184,7 @@
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/border4"
+        android:background="@drawable/change_color"
         android:fontFamily="@font/amaranth"
         android:text="ToggleButton"
         android:textColor="@color/white"
@@ -199,7 +199,7 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="100dp"
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.338"
@@ -208,14 +208,16 @@
         app:srcCompat="@drawable/upbutton" />
 
     <ImageButton
-        android:id="@+id/leftButton"
+        android:id="@+id/downButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="144dp"
+        android:layout_marginTop="60dp"
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.338"
+        app:layout_constraintStart_toEndOf="@+id/mapInformationView"
         app:layout_constraintTop_toBottomOf="@+id/upButton"
-        app:srcCompat="@drawable/leftbutton" />
+        app:srcCompat="@drawable/downbutton" />
 
     <ImageButton
         android:id="@+id/rightButton"
@@ -229,16 +231,14 @@
         app:srcCompat="@drawable/rightbutton" />
 
     <ImageButton
-        android:id="@+id/downButton"
+        android:id="@+id/leftButton"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginEnd="144dp"
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.324"
-        app:layout_constraintStart_toEndOf="@+id/mapInformationView"
         app:layout_constraintTop_toBottomOf="@+id/upButton"
-        app:srcCompat="@drawable/downbutton" />
+        app:srcCompat="@drawable/leftbutton" />
 
     <ToggleButton
         android:id="@+id/startButton"
@@ -320,6 +320,35 @@
         app:layout_constraintHorizontal_bias="0.462"
         app:layout_constraintStart_toEndOf="@+id/mapInformationView"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+    <TextView
+        android:id="@+id/modeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/amaranth"
+        android:text="Mode:"
+        android:textColor="@color/darkblue"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/robotStatusTxt"
+        app:layout_constraintTop_toBottomOf="@+id/startButton" />
+
+    <TextView
+        android:id="@+id/currentModeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TBD"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/upButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.179"
+        app:layout_constraintStart_toEndOf="@+id/modeTextView"
+        app:layout_constraintTop_toBottomOf="@+id/startButton"
+        app:layout_constraintVertical_bias="0.539" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
