--- a/mdp-group-15-master/Android/app/src/main/res/values/colors.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/values/colors.xml
@@ -3,10 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="turquoise">#A9C6DE</color>
+    <color name="turquoise">#548687</color>
     <color name="white">#FFFFFF</color>
-    <color name ="nude">#E6F8F9</color>
-    <color name ="darkblue">#38598B</color>
+    <color name ="nude">#8FBC94</color>
+    <color name ="darkblue">#56445D</color>
     <color name ="newwhite">#FFFDFB</color>
     <drawable name = "blue">#eaf5ff</drawable>
 </resources>
