add current mode

--- a/mdp-group-15-master/Android/app/src/main/res/layout/activity_arena.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/layout/activity_arena.xml
@@ -63,7 +63,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="@font/amaranth"
         android:text="00:00"
-        android:textColor="@android:color/black"
+        android:textColor="@color/darkblue"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/timerTextView"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
@@ -157,8 +157,8 @@
         android:fontFamily="@font/amaranth"
         android:shadowColor="@color/newwhite"
         android:textColor="@color/newwhite"
-        android:textOff="Auto"
-        android:textOn="Manual"
+        android:textOff="To Manual"
+        android:textOn="To Auto"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/mapInformationView"
@@ -258,7 +258,7 @@
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/border4"
+        android:background="@drawable/border5"
         android:fontFamily="@font/amaranth"
         android:shadowColor="@color/white"
         android:text="Clear"
@@ -272,7 +272,7 @@
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/border4"
+        android:background="@drawable/change_update_enable"
         android:fontFamily="@font/amaranth"
         android:shadowColor="@color/white"
         android:text="update"
@@ -301,7 +301,7 @@
         android:layout_marginTop="24dp"
         android:fontFamily="@font/amaranth"
         android:text="Timer"
-        android:textColor="@android:color/black"
+        android:textColor="@color/darkblue"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
@@ -330,7 +330,7 @@
         android:fontFamily="@font/amaranth"
         android:text="Mode:"
         android:textColor="@color/darkblue"
-        android:textSize="18sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/robotStatusTxt"
@@ -341,14 +341,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TBD"
-        android:textSize="18sp"
+        android:textColor="@color/darkblue"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/upButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.179"
+        app:layout_constraintHorizontal_bias="0.084"
         app:layout_constraintStart_toEndOf="@+id/modeTextView"
         app:layout_constraintTop_toBottomOf="@+id/startButton"
-        app:layout_constraintVertical_bias="0.539" />
+        app:layout_constraintVertical_bias="0.617" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
