--- a/mdp-group-15-master/Android/app/src/main/res/menu/menu.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/menu/menu.xml
@@ -7,8 +7,9 @@
         android:id="@+id/menu"/>
 
     <item
-        android:title="Bluetooth"
-        android:id="@+id/bluetooth"/>
+        android:id="@+id/bluetooth"
+        android:icon="@drawable/bluetooth"
+        android:title="Bluetooth" />
 
     <item
         android:title="Arena"
