--- a/mdp-group-15-master/Android/app/src/main/res/layout/activity_messaging.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/layout/activity_messaging.xml
@@ -91,10 +91,12 @@
 
     <TextView
         android:id="@+id/sentTextView"
-        android:layout_width="match_parent"
+        android:layout_width="478dp"
         android:layout_height="150dp"
         android:layout_below="@id/sentTitle"
         android:layout_alignParentStart="true"
+        android:layout_marginStart="62dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/border"
         android:padding="5dp"
         android:textSize="14sp" />
@@ -117,12 +119,14 @@
 
     <TextView
         android:id="@+id/receivedTextView"
-        android:layout_width="match_parent"
-        android:layout_height="164dp"
+        android:layout_width="478dp"
+        android:layout_height="160dp"
         android:layout_below="@id/receivedTitle"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="-3dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="59dp"
         android:background="@drawable/border"
         android:padding="5dp"
         android:textSize="14sp" />
