--- a/mdp-group-15-master/Android/app/src/main/res/drawable/border.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/drawable/border.xml
@@ -3,7 +3,8 @@
     <solid android:color="@android:color/white" />
     <stroke
         android:width="1dip"
-        android:color="@color/darkblue" />
+        android:color="@color/darkblue"
+        />
     <corners
         android:radius="10dp"/>
 </shape>
