--- a/mdp-group-15-master/Android/app/src/main/res/drawable/border3.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/drawable/border3.xml
@@ -3,7 +3,7 @@
     <solid
         android:color="#FFFFFF"/>
     <stroke
-        android:width="4dp"
-        android:color="@color/turquoise" />
-    <corners android:radius="30dp"/>
+        android:width="2dp"
+        android:color="@color/darkblue" />
+    <corners android:radius="15dp"/>
 </shape>
