--- a/mdp-group-15-master/Android/app/src/main/res/drawable/border6.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/drawable/border6.xml
@@ -2,11 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="#FFFFFF"/>
+        android:color="#80000000"/>
     <size
-        android:width="70dp"
-        android:height="70dp"/>
-
+        android:width="68dp"
+        android:height="68dp"/>
+    <stroke
+        android:width="1dp"/>
     <padding
         android:left="10dp"
         android:right="10dp"
