--- a/mdp-group-15-master/Android/app/src/main/res/drawable/change_color.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/drawable/change_color.xml
@@ -2,17 +2,19 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape>
-            <solid android:color="@color/turquoise"/>
-            <stroke android:width="1dip" android:color="@color/turquoise"/>
-            <corners android:radius="5dp"/>
-        </shape>
-
-    </item>
-    <item android:state_checked="false">
-        <shape>
             <solid android:color="@color/darkblue"/>
             <stroke android:width="1dip" android:color="@color/darkblue"/>
             <corners android:radius="5dp"/>
         </shape>
+
+
+    </item>
+    <item android:state_checked="false">
+        <shape>
+            <solid android:color="@color/white"/>
+            <stroke android:width="1dip" android:color="@color/darkblue"/>
+            <corners android:radius="5dp"/>
+        </shape>
+
     </item>
 </selector>
