--- a/mdp-group-15-master/Android/app/src/main/res/drawable/change_update_enable.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/drawable/change_update_enable.xml
@@ -2,12 +2,12 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true">
         <shape>
-            <solid android:color="@color/darkblue"/>
+            <solid android:color="@color/white"/>
             <stroke android:width="1dip" android:color="@color/darkblue"/>
             <corners android:radius="5dp"/>
         </shape>
-
     </item>
+
     <item android:state_enabled="false">
         <shape>
             <solid android:color="@color/grey"/>
