--- a/mdp-group-15-master/Android/app/src/main/res/layout/activity_arena.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/layout/activity_arena.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ArenaActivity">
 
-    <TextView
-        android:id="@+id/obstacle_legend4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:fontFamily="casual"
-        android:text="COLOR LEGEND:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    <View
+        android:id="@+id/view3"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/ltgray"
+        app:layout_constraintStart_toEndOf="@+id/obstacle_legend2"
         app:layout_constraintTop_toBottomOf="@+id/clearButton" />
 
     <include
@@ -159,11 +158,10 @@
         style="@android:style/Widget.Holo.ImageButton"
         android:layout_width="65dp"
         android:layout_height="65dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:background="@android:color/transparent"
         android:scaleType="centerInside"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toEndOf="@+id/mapInformationView"
         app:layout_constraintTop_toBottomOf="@+id/robotStatusTxt"
         app:srcCompat="@drawable/forward" />
@@ -195,7 +193,7 @@
 
     <Button
         android:id="@+id/clearButton"
-        android:layout_width="368dp"
+        android:layout_width="360dp"
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/border"
@@ -206,12 +204,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/obstacleToggleButton" />
+        app:layout_constraintTop_toBottomOf="@+id/autoToggleButton" />
 
     <ToggleButton
         android:id="@+id/sPToggleButton"
         android:layout_width="160dp"
         android:layout_height="40dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/change_color"
         android:checked="false"
@@ -221,7 +220,7 @@
         android:textOff="Start Point"
         android:textOn="Cancel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.036"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/selectSettingTextView" />
 
@@ -229,6 +228,7 @@
         android:id="@+id/waypointToggleButton"
         android:layout_width="160dp"
         android:layout_height="40dp"
+        android:layout_marginStart="36dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/change_color"
         android:fontFamily="casual"
@@ -237,17 +237,16 @@
         android:textOff="Waypoint"
         android:textOn="Cancel"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.036"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sPToggleButton" />
+        app:layout_constraintStart_toEndOf="@+id/sPToggleButton"
+        app:layout_constraintTop_toBottomOf="@+id/tiltSwitch" />
 
     <Button
         android:id="@+id/updateButton"
         android:layout_width="160dp"
         android:layout_height="40dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="220dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="228dp"
         android:background="@drawable/change_update_enable"
         android:enabled="false"
         android:fontFamily="casual"
@@ -255,16 +254,17 @@
         android:text="update"
         android:textColor="@color/change_textcolor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/sPToggleButton"
-        app:layout_constraintTop_toBottomOf="@+id/tiltSwitch" />
+        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintStart_toEndOf="@+id/autoToggleButton"
+        app:layout_constraintTop_toBottomOf="@+id/waypointToggleButton" />
 
     <ToggleButton
         android:id="@+id/obstacleToggleButton"
         android:layout_width="160dp"
         android:layout_height="40dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="220dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/change_color"
         android:fontFamily="casual"
         android:text="ToggleButton"
@@ -272,12 +272,14 @@
         android:textOff="Obstacle"
         android:textOn="Cancel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/updateButton" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/waypointToggleButton"
+        app:layout_constraintTop_toBottomOf="@+id/modeTextView" />
 
     <TextView
         android:id="@+id/selectSettingTextView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginTop="8dp"
         android:fontFamily="casual"
         android:text="Select Settings:"
@@ -304,8 +306,8 @@
     <Switch
         android:id="@+id/tiltSwitch"
         android:layout_width="96dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="568dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="260dp"
         android:fontFamily="casual"
         android:text="Tilt"
@@ -313,20 +315,20 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/mapInformationView" />
 
     <TextView
         android:id="@+id/modeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="112dp"
         android:fontFamily="casual"
         android:text="Mode:"
         android:textColor="@color/darkblue"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.976"
+        app:layout_constraintHorizontal_bias="0.988"
         app:layout_constraintStart_toEndOf="@+id/tiltSwitch"
         app:layout_constraintTop_toBottomOf="@+id/downButton" />
 
@@ -335,13 +337,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="52dp"
         android:fontFamily="casual"
         android:text="TBD"
         android:textColor="@color/darkblue"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.061"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/modeTextView"
         app:layout_constraintTop_toBottomOf="@+id/downButton" />
 
@@ -349,8 +351,8 @@
         android:id="@+id/autoToggleButton"
         android:layout_width="160dp"
         android:layout_height="40dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/change_color"
         android:fontFamily="casual"
         android:shadowColor="@color/newwhite"
@@ -358,16 +360,18 @@
         android:textOff="To Manual"
         android:textOn="To Auto"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/modeTextView" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sPToggleButton" />
 
     <ToggleButton
         android:id="@+id/exploreToggleButton"
         android:layout_width="160dp"
         android:layout_height="40dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/change_color"
+        android:checked="false"
         android:fontFamily="casual"
         android:shadowColor="@color/newwhite"
         android:textColor="@color/change_textcolor"
@@ -375,14 +379,16 @@
         android:textOn="Fastest"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/autoToggleButton" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/updateButton"
+        app:layout_constraintTop_toBottomOf="@+id/obstacleToggleButton" />
 
     <ToggleButton
         android:id="@+id/startButton"
         android:layout_width="160dp"
         android:layout_height="40dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="30dp"
         android:background="@drawable/change_color"
         android:checked="false"
         android:fontFamily="casual"
@@ -394,39 +400,76 @@
         app:layout_constraintTop_toBottomOf="@+id/exploreToggleButton" />
 
     <TextView
-        android:id="@+id/obstacle_legend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="11dp"
-        android:fontFamily="casual"
-        android:text="OBSTACLE"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/obstacle_legend4"
-        app:layout_constraintTop_toBottomOf="@+id/clearButton" />
-
-    <TextView
         android:id="@+id/obstacle_legend3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="casual"
         android:text="EXPLORED"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/obstacle_legend2"
+        app:layout_constraintHorizontal_bias="0.021"
+        app:layout_constraintStart_toEndOf="@+id/view3"
         app:layout_constraintTop_toBottomOf="@+id/clearButton"
-        app:layout_constraintVertical_bias="0.504" />
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/obstacle_legend4"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="casual"
+        android:text="COLOR LEGEND:"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/clearButton"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/obstacle_legend"
+        android:layout_width="wrap_content"
+        android:layout_height="25dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="casual"
+        android:text="OBSTACLE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/view"
+        app:layout_constraintTop_toBottomOf="@+id/clearButton"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/obstacle_legend2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="casual"
         android:text="WAYPOINT"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/view2"
+        app:layout_constraintTop_toBottomOf="@+id/clearButton"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/red"
+        app:layout_constraintStart_toEndOf="@+id/obstacle_legend4"
+        app:layout_constraintTop_toBottomOf="@+id/clearButton" />
+
+    <View
+        android:id="@+id/view2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/yellow"
         app:layout_constraintStart_toEndOf="@+id/obstacle_legend"
         app:layout_constraintTop_toBottomOf="@+id/clearButton" />
 
