--- a/mdp-group-15-master/Android/app/src/main/res/layout/reconfigure_dialog.xml
+++ b/mdp-group-15-master/Android/app/src/main/res/layout/reconfigure_dialog.xml
@@ -14,6 +14,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="56dp"
         android:ems="10"
+        android:fontFamily="casual"
         android:hint="F1 Mapping "
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,6 +29,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="32dp"
         android:ems="10"
+        android:fontFamily="casual"
         android:hint="F2 Mapping"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="44dp"
+        android:fontFamily="casual"
         android:text="F2:"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
         android:layout_marginTop="56dp"
+        android:fontFamily="casual"
         android:text="F1:"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,20 +63,24 @@
 
     <Button
         android:id="@+id/ReconSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginStart="116dp"
         android:layout_marginTop="56dp"
+        android:background="@drawable/border"
+        android:fontFamily="casual"
         android:text="Save"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/f2Label" />
 
     <Button
         android:id="@+id/ReconCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
         android:layout_marginStart="212dp"
         android:layout_marginTop="44dp"
+        android:background="@drawable/border"
+        android:fontFamily="casual"
         android:text="Cancel"
         app:layout_constraintStart_toEndOf="@+id/ReconSave"
         app:layout_constraintTop_toBottomOf="@+id/f2Txt" />
